syntax = "proto3";

package weather;

option go_package = "./../pb";

import "google/protobuf/timestamp.proto";


service WeatherService {
    rpc GetCurrentWeather(GetCurrentWeatherRequest) returns (GetCurrentWeatherResponse);
    rpc GetWeatherForecast(GetWeatherForecastRequest) returns (GetWeatherForecastResponse);
}

message GetCurrentWeatherRequest {
    string city_name = 1;
}

message GetCurrentWeatherResponse {
    string city_name = 1;
    double temperature = 2;
    double humidity = 3;
    string condition = 4;
    double wind_speed = 5;
}

message GetWeatherForecastRequest {
    string city_name = 1;
    google.protobuf.Timestamp date = 2;
}

message GetWeatherForecastResponse {
    repeated ForecastInfo forecasts = 1;
}

message ForecastInfo {
    google.protobuf.Timestamp date = 1;
    double temperature = 2;
    string condition = 3;
}
